[gd_scene load_steps=5 format=2]

[ext_resource path="res://Textures/UI/Button_Item1.png" type="Texture" id=1]
[ext_resource path="res://Scripts/InventorySlot.gd" type="Script" id=2]
[ext_resource path="res://Textures/UI/Button_Item2.png" type="Texture" id=3]
[ext_resource path="res://Textures/UI/BG_Dialogue.png" type="Texture" id=4]

[node name="InventorySlot" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1024.0
margin_bottom = -600.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )
normalTexture = ExtResource( 1 )
hoverTexture = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )

[node name="TextureRect2" type="TextureRect" parent="."]
visible = false
margin_left = -31.0
margin_top = -94.0
margin_right = 132.0
texture = ExtResource( 4 )

[connection signal="mouse_entered" from="." to="." method="_on_InventorySlot_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_InventorySlot_mouse_exited"]
